--- a/suma-fcc.html
+++ b/suma-fcc.html
@@ -18,12 +18,14 @@
           <img src="/medio-ambiente-fcc/assets/images/down.svg" alt="boton-menu" />
         </div>
         <div class="links">
-          <a href="#">Inicio</a>
-          <a href="#">Acerca de nosotros</a>
-          <a href="#">Artículos</a>
-          <a href="#" class="active">SuMA</a>
-          <a href="#">Galeria</a>
-          <a href="#">Mapa del sitio</a>
+          <a href="http://carlospereyra.edu.mx/MedioAmbienteFCC/index.html">Inicio</a>
+          <a href="http://carlospereyra.edu.mx/MedioAmbienteFCC/about-us.html"
+            >Acerca de nosotros</a
+          >
+          <a href="http://carlospereyra.edu.mx/MedioAmbienteFCC/articles.html">Artículos</a>
+          <a href="/medio-ambiente-fcc/suma-fcc" class="active">SuMA</a>
+          <a href="http://carlospereyra.edu.mx/MedioAmbienteFCC/sitemap.html">Galeria</a>
+          <a href="http://carlospereyra.edu.mx/MedioAmbienteFCC/sitemap.html">Mapa del sitio</a>
         </div>
       </nav>
     </header>
