add directory favicon multipurpose

--- a/suma-fcc.html
+++ b/suma-fcc.html
@@ -4,6 +4,32 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Medio Ambiente FCC | SuMA</title>
+    <link rel="icon" href="/medio-ambiente-fcc/assets/favicon/favicon.ico" />
+    <link
+      rel="apple-touch-icon"
+      sizes="76x76"
+      href="/medio-ambiente-fcc/assets/favicon/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="/medio-ambiente-fcc/assets/favicon/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="/medio-ambiente-fcc/assets/favicon/favicon-16x16.png"
+    />
+    <link rel="manifest" href="/medio-ambiente-fcc/assets/favicon/site.webmanifest" />
+    <link
+      rel="mask-icon"
+      href="/medio-ambiente-fcc/assets/favicon/safari-pinned-tab.svg"
+      color="#5bbad5"
+    />
+    <meta name="msapplication-TileColor" content="#da532c" />
+    <meta name="theme-color" content="#ffffff" />
     <link rel="stylesheet" href="styles/global.css" />
     <link rel="stylesheet" href="styles/suma.css" />
   </head>
