link home and size brand

--- a/eventos/semana-sin-unicel.html
+++ b/eventos/semana-sin-unicel.html
@@ -35,10 +35,12 @@
   </head>
   <body>
     <header class="navbar">
-      <div class="brand">
-        <img src="/medio-ambiente-fcc/assets/images/logo.png" alt="logo" />
-        <h3>Medio Ambiente FCC</h3>
-      </div>
+      <a href="http://carlospereyra.edu.mx/MedioAmbienteFCC/index.html">
+        <div class="brand">
+          <img src="/medio-ambiente-fcc/assets/images/logo.png" alt="logo" />
+          <h4>Medio Ambiente FCC</h4>
+        </div>
+      </a>
       <nav>
         <div id="button-dropdown" class="button-dropdown">
           <img src="/medio-ambiente-fcc/assets/images/down.svg" alt="boton-menu" />
