--- a/suma-fcc.html
+++ b/suma-fcc.html
@@ -36,8 +36,12 @@
   <body>
     <header class="navbar">
       <div class="brand">
-        <img src="/medio-ambiente-fcc/assets/images/logo.png" alt="logo" />
-        <h3>Medio Ambiente FCC</h3>
+        <a href="http://carlospereyra.edu.mx/MedioAmbienteFCC/index.html">
+          <div class="brand">
+            <img src="/medio-ambiente-fcc/assets/images/logo.png" alt="logo" />
+            <h4>Medio Ambiente FCC</h4>
+          </div>
+        </a>
       </div>
       <nav>
         <div id="button-dropdown" class="button-dropdown">
