--- a/eventos/reforestacion.html
+++ b/eventos/reforestacion.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Medio Ambiente FCC | Semana sin unicel</title>
+    <title>Medio Ambiente FCC | Reforestación</title>
     <link rel="icon" href="/medio-ambiente-fcc/assets/favicon/favicon.ico" />
     <link
       rel="apple-touch-icon"
@@ -62,64 +62,87 @@
         rgba(var(--hero-gradient-color-1), 0.42),
         rgba(var(--hero-gradient-color-2), 1)
       ),
-      url(/medio-ambiente-fcc/eventos/assets/semana-sin-unicel/heroImage.jpg); background-size: cover; background-position: center;">
+      url(/medio-ambiente-fcc/eventos/assets/reforestacion/heroImage.jpg); background-size: cover; background-position: center;">
         <div class="hero-content">
           <div class="breadcrumb">
             <a href="/medio-ambiente-fcc/suma-fcc">
               <img src="/medio-ambiente-fcc/assets/images/breadcrumb-right.svg" alt="" />
               Regresar
             </a>
-            <h1>Semana sin unicel en la FCC</h1>
+            <h1>Reforestación en la FCC</h1>
           </div>
         </div>
       </section>
       <div class="event-content">
         <p>
-          La Semana sin unicel en la FCC se realizó gracias a la participación, organización y
-          colaboración de los integrantes del grupo de medio ambiente de la FCC, el grupo SuMA FCC
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam dapibus nibh libero,
+          sollicitudin auctor ligula vestibulum id. Integer auctor purus eget lorem scelerisque.
         </p>
-        <h3>Compras</h3>
+        <h3>Lorem Ipsum</h3>
         <p>
-          Se realizó las compras de utensilios de plástico no desechables para ser usado como plan
-          emergente para los casos en los cuales las personas que no llevaran sus propios utensilios
-          se les prestaran estos utensilios no desechables y así evitar el uso de unicel en la FCC.
-          Este soporte se realizó en la cafetería de la FCC.
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam dapibus nibh libero,
+          sollicitudin auctor ligula vestibulum id. Integer auctor purus eget lorem scelerisque,
+          vitae facilisis dui condimentum. Sed imperdiet urna tortor, non posuere massa commodo vitae.
+          Vivamus in finibus mi, blandit aliquam erat. Duis at commodo dui, a convallis tortor.
         </p>
-        <h3>Lavado de utencilios</h3>
+        <div class="event-content-gallery">
+          <img
+            src="/medio-ambiente-fcc/eventos/assets/reforestacion/image1.jpg"
+            alt="Imagen 1 de diseño de carteles"
+          />
+          <img
+            src="/medio-ambiente-fcc/eventos/assets/reforestacion/image2.jpg"
+            alt="Imagen 2 de diseño de carteles"
+          />
+          <img
+            src="/medio-ambiente-fcc/eventos/assets/reforestacion/image3.jpg"
+            alt="Imagen 3 de diseño de carteles"
+          />
+        </div>
+        <h3>Lorem Ipsum</h3>
         <p>
-          Pensando en el cuidado de la salud de los usuarios de los utensilios de plástico
-          comprados, el grupo SuMA FCC nos dispusimos a lavar absolutamente todos los utensilios
-          comprados. Tal actividad la realizamos en la cocina de la FCC ( ubicada en el edificio
-          CCO2 ).
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam dapibus nibh libero,
+          sollicitudin auctor ligula vestibulum id. Integer auctor purus eget lorem scelerisque,
+          vitae facilisis dui condimentum. Sed imperdiet urna tortor, non posuere massa commodo vitae.
+          Vivamus in finibus mi, blandit aliquam erat. Duis at commodo dui, a convallis tortor.
         </p>
         <p>Primera etapa de lavado y secado de utencilios:</p>
         <div class="event-content-gallery">
           <img
-            src="/medio-ambiente-fcc/eventos/assets/semana-sin-unicel/image6.jpg"
-            alt="Imagen 1 de lavado y secado de utencilios"
-          />
-          <img
-            src="/medio-ambiente-fcc/eventos/assets/semana-sin-unicel/image7.jpg"
-            alt="Imagen 2 de lavado y secado de utencilios"
-          />
-        </div>
-        <h3>Diseño de carteles</h3>
-        <p>
-          La estudiante de Diseño Gráfico de la Facultad de Arquitectura de la BUAP MarÍa Fernanda
-          Sierra Gutierréz con matrícula: 201502055 es integrante del grupo SuMA FCC y ha diseñado
-          todos los carteles para los eventos de Medio Ambiente del grupo SuMA FC
-        </p>
-        <div class="event-content-gallery">
-          <img
-            src="/medio-ambiente-fcc/eventos/assets/semana-sin-unicel/cartel1.jpg"
+            src="/medio-ambiente-fcc/eventos/assets/reforestacion/image4.jpg"
             alt="Imagen 1 de diseño de carteles"
           />
           <img
-            src="/medio-ambiente-fcc/eventos/assets/semana-sin-unicel/cartel2.jpg"
+            src="/medio-ambiente-fcc/eventos/assets/reforestacion/image5.jpg"
             alt="Imagen 2 de diseño de carteles"
           />
           <img
-            src="/medio-ambiente-fcc/eventos/assets/semana-sin-unicel/cartel3.jpg"
+            src="/medio-ambiente-fcc/eventos/assets/reforestacion/image6.jpg"
+            alt="Imagen 3 de diseño de carteles"
+          />
+        </div>
+        <h3>Lorem Ipsum</h3>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam dapibus nibh libero,
+          sollicitudin auctor ligula vestibulum id. Integer auctor purus eget lorem scelerisque,
+          vitae facilisis dui condimentum. Sed imperdiet urna tortor, non posuere massa commodo vitae.
+          Vivamus in finibus mi, blandit aliquam erat. Duis at commodo dui, a convallis tortor.
+        </p>
+        <div class="event-content-gallery">
+          <img
+            src="/medio-ambiente-fcc/eventos/assets/reforestacion/image7.jpg"
+            alt="Imagen 1 de diseño de carteles"
+          />
+          <img
+            src="/medio-ambiente-fcc/eventos/assets/reforestacion/image8.jpg"
+            alt="Imagen 2 de diseño de carteles"
+          />
+          <img
+            src="/medio-ambiente-fcc/eventos/assets/reforestacion/image9.jpg"
+            alt="Imagen 3 de diseño de carteles"
+          />
+          <img
+            src="/medio-ambiente-fcc/eventos/assets/reforestacion/image10.jpg"
             alt="Imagen 3 de diseño de carteles"
           />
         </div>
