--- a/suma-fcc.html
+++ b/suma-fcc.html
@@ -61,6 +61,7 @@
     </header>
     <main>
       <div class="event-container">
+
         <article class="event-card-item">
           <a href="/medio-ambiente-fcc/suma/semana-sin-unicel">
             <img
@@ -78,6 +79,41 @@
             </a>
           </div>
         </article>
+
+        <article class="event-card-item">
+          <a href="/medio-ambiente-fcc/suma/reforestacion">
+            <img
+              src="/medio-ambiente-fcc/eventos/assets/reforestacion/cardImage.jpg"
+              alt="Grupo SuMA plantando retoños en area de convivencia"
+            />
+          </a>
+          <div class="event-card-info">
+            <a href="/medio-ambiente-fcc/suma/reforestacion">
+              <h4>Reforestación en la FCC</h4>
+              <p>
+                El grupo SuMA FCC realizó actividades de reforestación en el area de convivencia de la Facultad.
+              </p>
+            </a>
+          </div>
+        </article>
+
+        <article class="event-card-item">
+          <a href="/medio-ambiente-fcc/suma/carta-de-la-tierra">
+            <img
+              src="/medio-ambiente-fcc/eventos/assets/carta-de-la-tierra/cardImage.jpg"
+              alt="Grupo SuMA plantando retoños en area de convivencia"
+            />
+          </a>
+          <div class="event-card-info">
+            <a href="/medio-ambiente-fcc/suma/carta-de-la-tierra">
+              <h4>La carta de la tierra en la FCC</h4>
+              <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cumque, quidem.
+              </p>
+            </a>
+          </div>
+        </article>
+
       </div>
     </main>
     <footer class="footer">
