fix: change links to github pages

--- a/eventos/reforestacion.html
+++ b/eventos/reforestacion.html
@@ -65,7 +65,7 @@
       url(/medio-ambiente-fcc/eventos/assets/reforestacion/heroImage.jpg); background-size: cover; background-position: center;">
         <div class="hero-content">
           <div class="breadcrumb">
-            <a href="/medio-ambiente-fcc/suma-fcc">
+            <a href="/medio-ambiente-fcc/">
               <img src="/medio-ambiente-fcc/assets/images/breadcrumb-right.svg" alt="" />
               Regresar
             </a>
