--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             >Acerca de nosotros</a
           >
           <a href="http://carlospereyra.edu.mx/MedioAmbienteFCC/articles.html">Artículos</a>
-          <a href="/medio-ambiente-fcc/suma-fcc" class="active">SuMA</a>
+          <a href="/medio-ambiente-fcc/" class="active">SuMA</a>
           <a href="http://carlospereyra.edu.mx/MedioAmbienteFCC/sitemap.html">Galeria</a>
           <a href="http://carlospereyra.edu.mx/MedioAmbienteFCC/sitemap.html">Mapa del sitio</a>
         </div>
@@ -63,14 +63,14 @@
       <div class="event-container">
 
         <article class="event-card-item">
-          <a href="/medio-ambiente-fcc/suma/semana-sin-unicel">
+          <a href="/medio-ambiente-fcc/eventos/semana-sin-unicel">
             <img
               src="/medio-ambiente-fcc/eventos/assets/semana-sin-unicel/cardImage.jpg"
               alt="Imagen de la carta"
             />
           </a>
           <div class="event-card-info">
-            <a href="/medio-ambiente-fcc/suma/semana-sin-unicel">
+            <a href="/medio-ambiente-fcc/eventos/semana-sin-unicel">
               <h4>Semana sin unicel en la FCC</h4>
               <p>
                 El grupo SuMA FCC prestó utencilios a la cafetería de la FCC para dar soporte
@@ -81,14 +81,14 @@
         </article>
 
         <article class="event-card-item">
-          <a href="/medio-ambiente-fcc/suma/reforestacion">
+          <a href="/medio-ambiente-fcc/eventos/reforestacion">
             <img
               src="/medio-ambiente-fcc/eventos/assets/reforestacion/cardImage.jpg"
               alt="Grupo SuMA plantando retoños en area de convivencia"
             />
           </a>
           <div class="event-card-info">
-            <a href="/medio-ambiente-fcc/suma/reforestacion">
+            <a href="/medio-ambiente-fcc/eventos/reforestacion">
               <h4>Reforestación en la FCC</h4>
               <p>
                 El grupo SuMA FCC realizó actividades de reforestación en el area de convivencia de la Facultad.
@@ -98,14 +98,14 @@
         </article>
 
         <article class="event-card-item">
-          <a href="/medio-ambiente-fcc/suma/carta-de-la-tierra">
+          <a href="/medio-ambiente-fcc/eventos/carta-de-la-tierra">
             <img
               src="/medio-ambiente-fcc/eventos/assets/carta-de-la-tierra/cardImage.jpg"
               alt="Grupo SuMA plantando retoños en area de convivencia"
             />
           </a>
           <div class="event-card-info">
-            <a href="/medio-ambiente-fcc/suma/carta-de-la-tierra">
+            <a href="/medio-ambiente-fcc/eventos/carta-de-la-tierra">
               <h4>La carta de la tierra en la FCC</h4>
               <p>
                 Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cumque, quidem.
