--- a/eventos/semana-sin-unicel.html
+++ b/eventos/semana-sin-unicel.html
@@ -51,7 +51,7 @@
             >Acerca de nosotros</a
           >
           <a href="http://carlospereyra.edu.mx/MedioAmbienteFCC/articles.html">Artículos</a>
-          <a href="/medio-ambiente-fcc/suma-fcc" class="active">SuMA</a>
+          <a href="/medio-ambiente-fcc/" class="active">SuMA</a>
           <a href="http://carlospereyra.edu.mx/MedioAmbienteFCC/sitemap.html">Galeria</a>
           <a href="http://carlospereyra.edu.mx/MedioAmbienteFCC/sitemap.html">Mapa del sitio</a>
         </div>
